--- a/web/src/style/components/input.sass
+++ b/web/src/style/components/input.sass
@@ -2,3 +2,13 @@
 
 #input
     width: 100%
+    height: 3rem
+    outline: none
+    padding: 0 1rem
+    border: 1px solid #E8E8E8
+    border-radius: 0.25rem
+    font-family: 'Lato'
+    font-style: normal
+    font-weight: 400
+    font-size: 1rem
+    
