--- a/web/src/style/components/login.sass
+++ b/web/src/style/components/login.sass
@@ -15,9 +15,10 @@
     
 
 #forms
-    margin: auto
-    min-width: 80%
-    padding: 0 2rem
+    max-width:25rem
+    padding: 1rem
+    margin-top: 17rem
+   
     
     
     
