--- a/web/src/style/variable.sass
+++ b/web/src/style/variable.sass
@@ -1,6 +1,8 @@
 $font-stack: "Helvetica, sans-serif'"
+$font-sm: 1rem
+$font-lg: 1.5rem
 $text-color: #1a202c
 $text-color-secondary: #2b6cb0
 $bg-color: #f7fafc
 $bg-color-secondary: #04c35c
-     
+$text-error : red
